syntax = "proto3";

package push;

option go_package = "github.com/Doremi203/couply/backend/notificator/api/push";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Subscription {
  rpc SubscribeV1(SubscribeV1Request) returns (SubscribeV1Response) {
    option (google.api.http) = {
      post: "/v1/push/subscribe"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Подписаться на пуши";
      description: "Включает пуши для клиента";
      parameters: {
        headers: {
          name: "User-Token"
          description: "Токен пользователя"
          type: STRING
          required: true
        }
      }
    };
  }

  rpc UnsubscribeV1(UnsubscribeV1Request) returns (UnsubscribeV1Response) {
    option (google.api.http) = {
      post: "/v1/push/unsubscribe"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Отписаться от пушей";
      description: "Выключает пуши для клиента";
      parameters: {
        headers: {
          name: "User-Token"
          description: "Токен пользователя"
          type: STRING
          required: true
        }
      }
    };
  }
}

message SubscribeV1Request {
  string endpoint = 1;
  string p256dh = 2;
  string auth_key = 3;
}

message SubscribeV1Response {}

message UnsubscribeV1Request {
  string endpoint = 1;
}

message UnsubscribeV1Response {}